test/corpus/basic.txt
================================================================================
Simple JOB statement
================================================================================

//MYJOB    JOB

--------------------------------------------------------------------------------

(source_file
  (job_statement
    (label
      (name))))

================================================================================
JOB statement with accounting
================================================================================

//TESTJOB  JOB (123)

--------------------------------------------------------------------------------

(source_file
  (job_statement
    (label
      (name))
    (accounting_info)))

================================================================================
Simple EXEC statement
================================================================================

//STEP1    EXEC PGM=IEFBR14

--------------------------------------------------------------------------------

(source_file
  (exec_statement
    (label
      (name))
    (program_name)))

================================================================================
DD statement with DUMMY
================================================================================

//SYSDUMMY DD DUMMY

--------------------------------------------------------------------------------

(source_file
  (dd_statement
    (label
      (name))))

================================================================================
Comment line
================================================================================

//* This is a comment

--------------------------------------------------------------------------------

(source_file
  (comment))